--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -272,7 +272,7 @@ h1, h2, h3, h4, h5, h6 {
   font-size: 64px;
   font-weight: 700;
   line-height: 56px;
-  color: #0c0c0c;
+  color: #f5761c;
 }
 
 #hero p {
@@ -283,7 +283,7 @@ h1, h2, h3, h4, h5, h6 {
 }
 
 #hero p span {
-  color:#c44a12c4;
+  color:#ec510ac4;
   letter-spacing: 1px;
 }
 
@@ -294,7 +294,7 @@ h1, h2, h3, h4, h5, h6 {
 #hero .social-links a {
   font-size: 24px;
   display: inline-block;
-  color: #45505b;
+  color: #f88b25;
   line-height: 1;
   margin-right: 20px;
   transition: 0.3s;
@@ -614,8 +614,8 @@ section {
   position: absolute;
   top: 35px;
   left: 35px;
-  border-top: 3px solid #d7dce1;
-  border-left: 3px solid #d7dce1;
+  border-top: 3px solid #e1d7d9;
+  border-left: 3px solid #e1d7de;
   transition: all 0.5s ease 0s;
   z-index: 9994;
 }
@@ -628,8 +628,8 @@ section {
   position: absolute;
   bottom: 35px;
   right: 35px;
-  border-bottom: 3px solid #d7dce1;
-  border-right: 3px solid #d7dce1;
+  border-bottom: 3px solid #e1d7d7;
+  border-right: 3px solid #e1d7dc;
   transition: all 0.5s ease 0s;
   z-index: 9994;
 }
@@ -641,7 +641,7 @@ section {
 }
 
 .portfolio .portfolio-wrap .portfolio-info p {
-  color: #45505b;
+  color: #52455b;
   font-size: 14px;
   text-transform: uppercase;
   padding: 0;
@@ -1114,7 +1114,7 @@ section {
 # Footer
 --------------------------------------------------------------*/
 #footer {
-  background: #f7f8f9;
+  background: #f9f8f7;
   color: #45505b;
   font-size: 14px;
   text-align: center;
